# Test

./: .gitignore  APIManager.cxx  APIManager.h  CMakeLists.txt  Controller.h  MainWindow.cxx  MainWindow.h  MainWindow.ui  README.md  main.cxx  weather_ru_RU.ts
